--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
     -->
     <!-- emojis -->
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    
     <title>React App</title>
   </head>
   <body>
@@ -41,5 +43,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
   </body>
 </html>
